--- a/assets/css/skins/skin-anvil-default.css
+++ b/assets/css/skins/skin-anvil-default.css
@@ -107,18 +107,18 @@
   font-family: 'Exo 2',Source Sans Pro, sans-serif;
   font-size: 14px;
   color: #eee;
-  line-height: 40px;
+  line-height: 49px;
   padding-left: 14px;
   box-shadow: inset -2px -27px 34px -37px #010202;
 }
 .skin-anvil-default .content-header > h1 > small {
   font-size: 13px;
   color: #bbb;
-  line-height: 40px;
+  line-height: 49px;
   padding-left: 4px;
 }
 .skin-anvil-default .content-header > .breadcrumb {
-  top: 5px;
+  top: 10px;
 }
 .skin-anvil-default .content-header > .breadcrumb > .active {
   color: #999;
@@ -197,7 +197,8 @@
 }
 .skin-anvil-default .sidebar-menu .treeview-menu > li > a {
   padding: 0px;
-  color: #8aa4af;
+  color: #bdc0c1fa;
+  font-size: 12px;
 }
 .skin-anvil-default .sidebar-menu .treeview-menu > li.active > a,
 .skin-anvil-default .sidebar-menu .treeview-menu > li > a:hover {
